src/App.css
.App {
  text-align: center;
}

body {
  font-family: 'Ubuntu', sans-serif;
  padding-top: 50px;
  overflow-x: hidden; /* Prevent scroll on narrow devices */
  word-break: break-word;
}

img {
  max-width: 100%;
}

.PhoebeLogo{
  margin-top: 0 !important;
  margin-bottom: 0 !important;
}

.img-center {
    display: block;
    margin-left: auto;
    margin-right: auto;
}

.img-flip-vert {
        -moz-transform: scaleY(-1);
        -o-transform: scaleY(-1);
        -webkit-transform: scaleY(-1);
        transform: scaleY(-1);
        filter: FlipV;
        -ms-filter: "FlipV";
}

h1, .h1 {
  font-size: 40px;
}

h2, .h2 {
  font-size: 30px;
}

h3, .h3 {
  font-size: 24px;
}

p {
  text-align: justify;
  text-justify: inter-word;
}

a {
  color: #2B71B1;
}

code {
  color: #2B71B1;
  background-color: #e6f2fe;
}

.logo-invert {
  -webkit-filter: grayscale(1) invert(1) brightness(1.5);
  filter: grayscale(1) invert(1) brightness(1.5);
}

.content-dark {
  background-color: #2B71B1;
  color: #E6E6E6;
}

.content-dark h1, .content-dark h2, .content-dark h3, .content-dark h4, .content-dark h5 {
  color: #E6E6E6
}

.content-dark pre {
  background-color: #456583;
  border-color: #f5f5f5; /* same as pre background-color */
  color: white;
}

.content-dark code {
  color: #e6f2fe;
  background-color: #456583;
}

.content-dark a:not(.btn) {
  color: #E6E6E6 !important;
  font-weight: bold;
}

.content-dark a:not(.btn):hover {
  color: white !important;
}

.content-dark img.img-handle-invert {
   -webkit-filter: grayscale(1) invert(1) brightness(1.5);
   filter: grayscale(1) invert(1) brightness(1.5);
 }

/* NAVBAR */

.navbar-collapse{
  overflow-x: hidden;
  max-height: 90%;
}

.navbar-fixed-top .navbar-collapse, .navbar-fixed-bottom .navbar-collapse {
  max-height: 500px;
}

.navbar-transparent .navbar-toggle > .icon-bar {
  background-color: #E6E6E6 !important;
}

.navbar-nav.active{
  background-color: #2B71B1;
}

.navbar-transparent{
  background-color: #2B71B1;
  box-shadow: none !important;
  transition: none;
  color: #E6E6E6;
}

.navbar-brand{
  font-family: 'Merriweather', serif;
  line-height: 24px;
  color: #444444;
}

.navbar-transparent .navbar-brand{
  color: #E6E6E6;
}

.navbar-transparent .navbar-brand:hover{
  color: #fff;
}

.navbar-transparent .dropdown-menu{
  background-color: #2B71B1;
}

.navbar-transparent .navbar-nav > li > a{
  color: #E6E6E6;
}

.navbar-transparent .navbar-nav > li > a:hover{
  color: #fff;
}

.navbar-transparent .navbar-nav > li > a:focus{
  color: #fff !important;
  background-color: #2B71B1 !important;  //TODO: make this a darker shade
}

.navbar-transparent .form-control, .navbar-transparent .input-group-addon {
  color: #E6E6E6;
}

.navbar-fixed-top .btn-default {
  box-shadow: none !important;
  border: none !important;
}

.navbar-transparent .btn-default, .navbar-transparent .btn-default:focus {
  background-color: transparent;
  color: #E6E6E6;
}

.navbar-transparent .navbar-nav > a.active, .navbar-transparent .navbar-nav > a.active:hover, .navbar-transparent .navbar-nav > a.active:focus{
  color: #fff !important;
  background-color: #2B71B1 !important;
  border-bottom-style: solid !important;
  border-bottom-color: #E6E6E6 !important;
/*
  border-bottom-color: #0D87E9 !important;
*/
  border-bottom-width: 2px !important;
}

.navbar-trasparent .navbar-nav .open .dropdown-menu > .disabled > a, .navbar-transparent .navbar-nav .open .dropdown-menu > .disabled > a:hover, .navbar-transparent .navbar-nav .open .dropdown-menu > .disabled > a:focus {
    color: #212121;
    background-color: transparent;
}

.navbar-transparent .navbar-nav .open .dropdown-menu > li > a, .navbar-transparent .navbar-nav .open .dropdown-menu > li > a:hover, .navbar-transparent .navbar-nav .open .dropdown-menu > li > a:focus, .navbar-transparent .dropdown-menu > li > a, .navbar-transparent .dropdown-menu > li > a:hover, .navbar-transparent .dropdown-menu > li > a:focus {
    background-color: transparent;
    color: #E6E6E6;
}

.img-dropshadow {
  -webkit-box-shadow: 5px 5px 13px -3px rgba(0,0,0,0.75);
  -moz-box-shadow: 5px 5px 13px -3px rgba(0,0,0,0.75);
  box-shadow: 5px 5px 13px -3px rgba(0,0,0,0.75);
}

/* BOOTSTRAP GRID */

.row {
  margin-top: 10px;
}

/* BOOTSTRAP BUTTONS */


.btn-primary, .btn-primary:hover, .btn-primary:active, .btn-primary:focus {
  background-color: transparent;
  color: #2B71B1;
  border: 1px solid #2B71B1;
}

.btn-primary-invert, .btn-primary-invert:hover, .btn-primary-invert:active, .btn-primary-invert:focus {
  background-color: white;
  color: #2B71B1 !important;
  border: 1px solid white;
}

.btn-transparent, .btn-transparent:focus {
  background-color: transparent;
  color: #D6D6D6 !important;
  border-width: 1px;
  border-color: #D6D6D6 !important;
  border: 1px solid;
  box-shadow: none;
}

.btn-transparent:hover {
  text-decoration: none;
  color: #ffffff !important;
  border-color: #ffffff !important;
  border-width: 1.2px;
}

.btn-transparent-light {
  border-color: #D6D6D6 !important;
  background-color: transparent;
  /* color: #D6D6D6 !improtat; */
}

/* BOOSTRAP ALERTS */

.alert-danger{
  /* background-color: #E44B50 !important;*/
  background-color: #d66b6b !important;
}

.alert-warning{
  background-color: rgba(43, 113, 177, 0.82) !important;
}

.alert{
  padding-top: 30px !important;
  padding-bottom: 30px !important
}



/* BOOTSTRAP JUMBOTRONS */

.jumbotron {
  background-color: #2B71B1;
  padding-top: 25px;
  padding-bottom: 25px;
}

.jumbotron-black {
  background-color: #000000;
}

.jumbotron h1, .jumbotron h2, .jumbotron h3, .jumbotron h4, .jumbotron p{
  align: left;
  color: #E6E6E6;
  font-family: 'Merriweather', serif;
}

.jumbotron h1{
  font-size: 48px;
}

/* NEWS PANELS */

.news-callout {
  margin: 20px 0;
  padding: 15px 30px 15px 15px;
  border-left: 5px solid #eee;
  border-color: #2B71B1;
}

a.news-permalink {
    font-size: 1em;
    padding: 0 4px 4px 4px;
    text-decoration: none;
    visibility: hidden;
}

*:hover > a.news-permalink {
  visibility: visible;
}

/* DOCS - JUPTER NOTEBOOK RENDERING */

.prompt{
  /* hide the input number in the Jupyter notebook prompts */
  /* text-indent: 100%; */
  /* white-space: nowrap; */
  /* overflow: hidden; */
  /* width: 0 !important; */
  display: none;
}

.nteract-display-area-stdout, .nteract-display-area-stderr{
  /* copy from bootstrap pre */
  display: block;
  padding: 11px;
  margin: 0 0 11.5px;
  font-size: 12px;
  line-height: 1.846;
  word-break: break-all;
  word-wrap: break-word;
  background-color: #f5f5f5;
  border: 1px solid #cccccc;
  border-radius: 3px;
  /* copy from bootstrap code */
  font-family: Menlo,Monaco,Consolas,"Courier New",monospace !important;
}

.nteract-display-area-stdout {
  color: #212121;
}

.nteract-display-area-sterr {
  color: red;
}

.content-margin {
  padding-left: 0 !important;
}

.outputs {
  padding-left: 0 !important;
}


/* RESPONSIVE CUSTOM LAYOUT */

@media screen and (max-width: 767px){
  /* CSS TO APPLY WHEN NAVBAR COLLAPSED */
  .content {
    padding-left: 25px !important;
    padding-right: 25px !important;
  }
  .prompt {
    width: 0 !important;
  }
  .cell > .content-margin, .cell > .outputs {
    padding-left: 0 !important;
  }
  .versionSwitcher {
    /* display vertically instead of horizontally */
    display: inline-grid !important;
  }

}

/* OTHER */

